// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots needs update with npm test 1`] = `
"Snapshot Summary
 › 2 snapshot tests failed in 1 test suite. Inspect your code changes or run \`npm test -- -u\` to update them.

Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 total
Snapshots:   2 failed, 2 total
Time:        0.01s
Ran all test suites.
"
`;

exports[`snapshots needs update with yarn test 1`] = `
"Snapshot Summary
 › 2 snapshot tests failed in 1 test suite. Inspect your code changes or run \`yarn test -u\` to update them.

Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 total
Snapshots:   2 failed, 2 total
Time:        0.01s
Ran all test suites.
"
`;
